dc_to_k8s/djangoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: djangoapp
  name: djangoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: djangoapp
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx_network: "true"
        io.kompose.service: djangoapp
    spec:
      containers:
      - image: carranz314/prueba-django-https:v1
        imagePullPolicy: ""
        name: djangoapp
        resources: {}
        volumeMounts:
        - mountPath: /opt/services/djangoapp/src
          name: djangoapp-claim0
        - mountPath: /opt/services/djangoapp/static
          name: static-volume
        - mountPath: /opt/services/djangoapp/media
          name: media-volume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: djangoapp-claim0
        persistentVolumeClaim:
          claimName: djangoapp-claim0
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume
status: {}
