dc_to_k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx_network: "true"
        io.kompose.service: nginx
    spec:
      containers:
      - image: pagespeed/nginx-pagespeed:latest
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 443
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-claim0
        - mountPath: /opt/services/djangoapp/static
          name: static-volume
        - mountPath: /opt/services/djangoapp/media
          name: media-volume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nginx-claim0
        persistentVolumeClaim:
          claimName: nginx-claim0
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume
status: {}
